Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.36 ===
* Multiple methods that fell back to the $wgUser global variable were
  individually hard deprecated previously. The following have now been removed:
  - ApiTestCase::doLogin
  - Title::getUserPermissionsErrors
  - Title::userCan
  - Title::quickUserCan
  - WebRequest::getLimitOffset
  - All methods of the old SpecialPageFactory; the entire class was removed
* The global function `wfWaitForSlaves`, deprecated in 1.27 and hard-deprecated
  in 1.35, has been removed. Use LBFactory::waitForReplication() instead.
* The global variable $wgMemc, deprecated since 1.35, has been removed.
  Usage should generally be migrated to WANObjectCache, or if you really need
  the internal object, use ObjectCache::getLocalClusterInstance instead.
* CategoryFinder, which was deprecated in 1.31 and hard-deprecated in 1.35,
  has been removed.
* Sanitizer::escapeId(), deprecated in 1.30, has been removed.
* The ParserBeforeTidy hook, deprecated in 1.35, has been removed.
* All methods of MWTidy except for MW::tidy() have been removed.  These
  were either @internal or deprecated in 1.35.
* The support for IE8 has been dropped.
* Less mixin `.background-image-svg-quick()` from mediawiki.mixins.less,
  deprecated since 1.35, has been removed.
* The ResourceLoader module `mediawiki.legacy.oldshared` and its file
  'oldshared.css', deprecated since 1.35 has been removed (T248357).
* The LinkBegin and LinkEnd hooks, deprecated in 1.28, have been removed. You
  can instead use the HtmlPageLinkRendererBegin and HtmlPageLinkRendererEnd
  hooks, respectively.
* Skin::getDynamicStylesheetQuery(), deprecated in 1.32, has been removed. You
  should use action=raw&ctype=text/css directly.
* Skin::makeI18nUrl(), deprecated in 1.35, has been removed.
* The following User methods, deprecated and moved to BlockManager in 1.34,