@@ -531,33 +531,6 @@ class RecentChange implements Taggable {
 	}
 
 	/**
-	 * Mark a given change as patrolled
-	 *
-	 * @deprecated since 1.35, use doMarkPatrolled directly
-	 *
-	 * @param RecentChange|int $change RecentChange or corresponding rc_id
-	 * @param bool $auto For automatic patrol
-	 * @param string|string[]|null $tags Change tags to add to the patrol log entry
-	 *   ($user should be able to add the specified tags before this is called)
-	 * @return array[]|null See doMarkPatrolled(), or null if $change is not an existing rc_id
-	 */
-	public static function markPatrolled( $change, $auto = false, $tags = null ) {
-		wfDeprecated( __METHOD__, '1.35' );
-
-		global $wgUser;
-
-		$change = $change instanceof RecentChange
-			? $change
-			: self::newFromId( $change );
-
-		if ( !$change instanceof RecentChange ) {
-			return null;
-		}
-
-		return $change->doMarkPatrolled( $wgUser, $auto, $tags );
-	}
-
-	/**
 	 * Mark this RecentChange as patrolled
 	 *
 	 * NOTE: Can also return 'rcpatroldisabled', 'hookaborted' and
